--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ yarn-error.log*
 
 # extra
 /private
+
+/public/index
+/public/bruh
+/public/business
+/public/colors
+/public/instagram
+/public/old
