--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,9 @@ yarn-error.log*
 # extra
 /private
 
-/public/index
-/public/bruh
-/public/business
-/public/colors
-/public/instagram
-/public/old
+/public/index/
+/public/bruh/
+/public/business/
+/public/colors/
+/public/instagram/
+/public/old/
