--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@ yarn-error.log*
 
 # extra
 /private
+
+**/androidprivacypolicy
+**/bruh
+**/business
+**/colors
+**/csgo
+**/index
+**/instagram
+**/terminal
