--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,11 @@ yarn-error.log*
 # extra
 /private
 
-**/androidprivacypolicy
-**/bruh
-**/business
-**/colors
-**/csgo
-**/index
-**/instagram
-**/terminal
+/**/androidprivacypolicy
+/**/bruh
+/**/business
+/**/colors
+/**/csgo
+/**/index
+/**/instagram
+/**/terminal
