--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,11 @@ yarn-error.log*
 # extra
 /private
 
-/**/androidprivacypolicy
-/**/bruh
-/**/business
-/**/colors
-/**/csgo
-/**/index
-/**/instagram
-/**/terminal
+public/**/androidprivacypolicy
+public/**/bruh
+public/**/business
+public/**/colors
+public/**/csgo
+public/**/index
+public/**/instagram
+public/**/terminal
