--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://ozpaker.org",
   "dependencies": {
+    "@react-three/postprocessing": "^2.16.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -51,7 +52,6 @@
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
-    "@types/three": "^0.148.0",
     "react-snap": "^1.23.0"
   }
 }
