--- a/package.json
+++ b/package.json
@@ -4,22 +4,17 @@
   "private": true,
   "homepage": "https://ozpaker.org",
   "dependencies": {
+    "@react-three/fiber": "^8.18.0",
     "@react-three/postprocessing": "^2.16.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.11",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
     "gh-pages": "^4.0.0",
     "lodash-es": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
-    "react-three-fiber": "^6.0.13",
-    "three": "^0.148.0",
-    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
     "webpack": "^5.75.0"
   },
@@ -51,7 +46,24 @@
     ]
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.28.0",
+    "@types/bonjour": "^3.5.13",
     "@types/lodash-es": "^4.17.6",
-    "react-snap": "^1.23.0"
+    "@types/node": "^24.2.1",
+    "@types/prettier": "^2.7.3",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "@types/stats.js": "^0.17.4",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/three": "^0.179.0",
+    "@types/trusted-types": "^2.0.7",
+    "add": "^2.0.6",
+    "or": "^0.2.0",
+    "react-snap": "^1.23.0",
+    "typescript": "^4.9.5",
+    "yarn": "^1.22.22"
   }
 }
